# ppo-smc-asset-allocation

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: verify.yml  web.yml
.specify/: feature.json
apps/warroom/: .env.development  .env.example  .eslintrc.cjs  .gitignore  .prettierignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
data/raw/: amd_daily_20180101_20260429.parquet  amd_daily_20180101_20260429.parquet.meta.json  amd_daily_20180101_20260508.parquet  amd_daily_20180101_20260508.parquet.meta.json  amd_daily_20180101_20260513.parquet  amd_daily_20180101_20260513.parquet.meta.json  dtb3_daily_20180101_20260429.parquet  dtb3_daily_20180101_20260429.parquet.meta.json  dtb3_daily_20180101_20260508.parquet  dtb3_daily_20180101_20260508.parquet.meta.json  dtb3_daily_20180101_20260513.parquet  dtb3_daily_20180101_20260513.parquet.meta.json  gld_daily_20180101_20260429.parquet  gld_daily_20180101_20260429.parquet.meta.json  gld_daily_20180101_20260508.parquet  gld_daily_20180101_20260508.parquet.meta.json  gld_daily_20180101_20260513.parquet  gld_daily_20180101_20260513.parquet.meta.json  mu_daily_20180101_20260429.parquet  mu_daily_20180101_20260429.parquet.meta.json  mu_daily_20180101_20260508.parquet  mu_daily_20180101_20260508.parquet.meta.json  mu_daily_20180101_20260513.parquet  mu_daily_20180101_20260513.parquet.meta.json  nvda_daily_20180101_20260429.parquet  nvda_daily_20180101_20260429.parquet.meta.json  nvda_daily_20180101_20260508.parquet  nvda_daily_20180101_20260508.parquet.meta.json  nvda_daily_20180101_20260513.parquet  nvda_daily_20180101_20260513.parquet.meta.json  tlt_daily_20180101_20260429.parquet  tlt_daily_20180101_20260429.parquet.meta.json  tlt_daily_20180101_20260508.parquet  tlt_daily_20180101_20260508.parquet.meta.json  tlt_daily_20180101_20260513.parquet  tlt_daily_20180101_20260513.parquet.meta.json  tsm_daily_20180101_20260429.parquet  tsm_daily_20180101_20260429.parquet.meta.json  tsm_daily_20180101_20260508.parquet  tsm_daily_20180101_20260508.parquet.meta.json  (+2 more)
docs/: findings.md  related_work.md
infra/: .dockerignore  Dockerfile.inference  docker-compose.gateway.yml  docker-compose.inference.yml
notebooks/: train_colab.ipynb
policies/: 500k_smc_seed42_metadata.json
scripts/: build_episode_artifact.py  build_golden_snapshot.py  build_smc_expected_features.py  build_smc_fixtures.py  colab_train_test_split.md  oracle_upper_bound.py  run_daily_tracker.py
services/gateway/: .dockerignore  .gitignore  Dockerfile  pom.xml
specs/001-smc-feature-engine/: data-model.md  plan.md  tasks.md
specs/002-data-ingestion/: plan.md  quickstart.md  tasks.md
specs/003-ppo-training-env/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-ppo-training-loop/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/005-inference-service/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-spring-gateway/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-react-warroom/: data-model.md  design-stitch-prompt.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-smc-engine-v2/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-episode-detail-store/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-live-tracking-dashboard/: coverage-trace.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/data_ingestion/: __init__.py  atomic.py  cli.py  config.py  fetcher.py  hashing.py  loader.py  metadata.py  quality.py  verify.py  writer.py
src/inference_service/: __init__.py  __main__.py  app.py  config.py  episode_schemas.py  episodes.py  handler.py  live_endpoints.py  redis_io.py  scheduler.py  schemas.py
src/live_tracking/: __init__.py  calendar.py  frame_builder.py  inference.py  pipeline.py  status.py  store.py
src/portfolio_env/: __init__.py  action.py  config.py  data_loader.py  env.py  info.py  observation.py  render.py  reward.py  seeding.py
src/ppo_training/: __init__.py  __main__.py  evaluate.py  predict.py  train.py  trajectory_writer.py
src/smc_features/: README.md  __init__.py  atr.py  batch.py  fvg.py  incremental.py  ob.py  structure.py  swing.py  types.py
tests/: conftest.py
tests/contract/: test_cli_exit_codes.py  test_determinism.py  test_event_schema.py  test_invariants.py  test_metadata_schema.py  test_portfolio_env_gym_check.py  test_portfolio_env_info_schema.py  test_portfolio_env_public_api.py  test_public_api.py  test_public_api_signatures.py  test_state_immutability.py  test_visualize_signature.py
tests/fixtures/: README.md  expected_smc_features.parquet  nvda_2023_2024.parquet  nvda_2024H1.parquet
tests/integration/: test_atomic_fetch.py  test_batch_compute.py  test_batch_incremental_equivalence.py  test_byte_identical.py  test_cross_platform_fixture.py  test_error_messages.py  test_fetch_e2e.py  test_fetch_perf.py  test_incremental_latency.py  test_load_perf.py  test_load_schema_compat.py  test_performance.py  test_portfolio_env_cross_platform.py  test_portfolio_env_data_hash_mismatch.py  test_portfolio_env_info_completeness.py  test_portfolio_env_perf.py  test_portfolio_env_random_episode.py  test_portfolio_env_reward_components.py  test_portfolio_env_smc_ablation.py  test_quality_flag_propagation.py  test_rebuild_atomicity.py  test_repo_size.py  test_smc_cross_platform.py  test_smc_pipeline.py  test_verify_roundtrip.py  test_visualize_html.py  test_visualize_png.py
tests/manual/: visual_review_protocol.md
tests/unit/: test_atr.py  test_batch.py  test_bos.py  test_choch.py  test_config.py  test_edge_cases.py  test_fvg.py  test_hashing.py  test_incremental_errors.py  test_loader.py  test_metadata.py  test_ob.py  test_portfolio_env_action.py  test_portfolio_env_config.py  test_portfolio_env_data_loader.py  test_quality.py  (+12 more)
(+236 files in other folders)
