[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ppo-smc-asset-allocation"
version = "0.1.0"
description = "PPO + SMC multi-asset allocation research code (data ingestion, feature engine, RL training)."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Proprietary — research use" }
authors = [{ name = "DaYi-TW" }]

# Runtime deps. Versions deliberately constrained per spec 002 plan.md and
# research.md decisions; lock file (requirements-lock.txt) pins exact patch
# versions for byte-identical reproduction.
dependencies = [
    "yfinance~=0.2.40",
    "fredapi~=0.5.2",
    "pyarrow~=15.0",
    "pandas>=2.0,<3.0",
    "tenacity~=8.2",
    "jsonschema>=4.20,<5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=4.1,<6.0",
    "vcrpy>=6.0,<7.0",
    "ruff>=0.4,<1.0",
    "mypy>=1.8,<2.0",
    "pip-tools>=7.4,<8.0",
]

[project.scripts]
ppo-smc-data = "data_ingestion.cli:main"

[project.urls]
Homepage = "https://github.com/DaYi-TW/ppo-smc-asset-allocation"

[tool.setuptools.packages.find]
where = ["src"]
include = ["data_ingestion*", "smc_features*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = [
    "error",
    # yfinance occasionally emits FutureWarning from pandas internals; ignore
    # only those with explicit known sources to keep warnings-as-errors useful.
    "ignore::DeprecationWarning:yfinance",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",   # line-length handled by formatter
    # 本專案文件與註解採繁體中文，刻意使用全形標點。RUF001/002/003 的「ambiguous
    # unicode character」誤判會把每個全形逗號 / 括號 / 冒號報為錯誤。
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
]

[tool.mypy]
python_version = "3.11"
files = ["src"]
warn_unused_ignores = true
warn_redundant_casts = true
# strict = true 會因 pandas / pyarrow 缺 py.typed 與內部函式缺 return annotation
# 產生大量噪音；T047 已先收斂 ruff。剩餘 strict 化（return annotation + Literal
# narrow + Any-return）作為 Polish phase 的後續任務（追蹤於 tasks.md T047 補充）。
# 目前以 default 嚴格度執行確保 CI 至少能 lint / type-check 通過。
disallow_untyped_defs = false
warn_unused_configs = true
# pandas / pyarrow / fredapi / yfinance 都不附 py.typed marker；安裝 types-* stubs
# 後仍有大量 Any 漏網，與「strict」精神反向。實務折衷：對缺 stub 的第三方套件
# 略過分析，但保留專案內所有 src/ 程式碼的 strict 檢查。
[[tool.mypy.overrides]]
module = [
    "pandas",
    "pyarrow",
    "pyarrow.*",
    "yfinance",
    "fredapi",
    "jsonschema",
    "tenacity",
    "tenacity.*",
]
ignore_missing_imports = true
follow_imports = "skip"

[tool.coverage.run]
source = ["data_ingestion", "smc_features"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
