[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ppo-smc-asset-allocation"
version = "0.1.0"
description = "PPO + SMC multi-asset allocation research code (data ingestion, feature engine, RL training)."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Proprietary — research use" }
authors = [{ name = "DaYi-TW" }]

# Runtime deps. Versions deliberately constrained per spec 002 plan.md and
# research.md decisions; lock file (requirements-lock.txt) pins exact patch
# versions for byte-identical reproduction.
dependencies = [
    "yfinance~=0.2.40",
    "fredapi~=0.5.2",
    "pyarrow~=15.0",
    "pandas>=2.0,<3.0",
    "numpy>=1.24,<3.0",
    "tenacity~=8.2",
    "jsonschema>=4.20,<5.0",
    # 001 — SMC feature visualisation (US2 雙後端：PNG + HTML)
    # mplfinance 一直為 alpha/beta（PyPI 唯一發行系列為 0.12.xby）。鎖到當前
    # 最新 0.12.10b0 即可滿足 spec FR-009/FR-010 的圖層需求；以 ==0.12.10b0
    # 不用 ~= 因 PEP 440 ~= 對 pre-release 行為怪異。
    "mplfinance==0.12.10b0",
    "plotly>=5.18,<6.0",
    # 003 — PPO 訓練環境
    # gymnasium 0.29+ 提供 reset(*, seed, options) 五元組 API 與 env_checker
    # 嚴格契約檢查（spec FR-001 / SC-003）。
    "gymnasium~=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=4.1,<6.0",
    "vcrpy>=6.0,<7.0",
    "ruff>=0.4,<1.0",
    "mypy>=1.8,<2.0",
    "pip-tools>=7.4,<8.0",
]
# 004 — PPO 訓練主迴圈所需相依。刻意分開為 optional，避免 001/002/003 純函式
# 庫的使用者被迫安裝 ~700 MB 的 torch + CUDA wheel。
# 安裝：``pip install -e .[train]``（本地 CPU）或於 Colab cell 執行。
train = [
    "stable-baselines3>=2.3,<3.0",
    "torch>=2.1,<3.0",
    "tensorboard>=2.15,<3.0",
]
# 005 — 推理服務（C-lite 路線：FastAPI + APScheduler + Redis pub/sub）。
# 安裝：``pip install -e .[inference]``。policy.zip + data/raw 由 image build 時打包。
inference = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "apscheduler>=3.10,<4.0",
    "redis[hiredis]>=5.0,<6.0",
    "pytz>=2024.2",
    "python-json-logger>=2.0,<4.0",
    "pydantic-settings>=2.4,<3.0",
    "stable-baselines3>=2.3,<3.0",
    "torch>=2.1,<3.0",
]
# 005 — 推理服務測試所需相依（unit + integration + contract）。
inference-dev = [
    "pytest-asyncio>=0.23,<1.0",
    "httpx>=0.27,<1.0",
    "fakeredis>=2.26,<3.0",
    "testcontainers[redis]>=4.8,<5.0",
    "openapi-spec-validator>=0.7,<1.0",
    "freezegun>=1.5,<2.0",
]

[project.scripts]
ppo-smc-data = "data_ingestion.cli:main"
inference-service = "inference_service.__main__:main"

[project.urls]
Homepage = "https://github.com/DaYi-TW/ppo-smc-asset-allocation"

[tool.setuptools.packages.find]
where = ["src"]
include = ["data_ingestion*", "smc_features*", "portfolio_env*", "ppo_training*", "inference_service*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "benchmark: 性能基準回歸測試（spec SC-001 / SC-003）",
    "slow: 跑真 PPO load + episode，~30s/test（spec 005 SC-007）",
]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    # yfinance occasionally emits FutureWarning from pandas internals; ignore
    # only those with explicit known sources to keep warnings-as-errors useful.
    "ignore::DeprecationWarning:yfinance",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF", "TID"]
ignore = [
    "E501",   # line-length handled by formatter
    # 本專案文件與註解採繁體中文，刻意使用全形標點。RUF001/002/003 的「ambiguous
    # unicode character」誤判會把每個全形逗號 / 括號 / 冒號報為錯誤。
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
]

# T054a — spec 001 FR-016 / spec 003 plan Constitution Check：``smc_features`` 與
# ``portfolio_env`` 皆為純函式庫，不得依賴 Web 框架、訊息中介、資料庫存取、
# HTTP client。違反會在 ruff TID251 報錯。
[tool.ruff.lint.flake8-tidy-imports.banned-api]
"flask".msg = "純函式庫不得依賴 Web 框架（spec 001 FR-016 / 003 Principle IV）"
"fastapi".msg = "純函式庫不得依賴 Web 框架（spec 001 FR-016 / 003 Principle IV）"
"aiohttp".msg = "純函式庫不得依賴 HTTP server（spec 001 FR-016 / 003 Principle IV）"
"django".msg = "純函式庫不得依賴 Web 框架（spec 001 FR-016 / 003 Principle IV）"
"sqlalchemy".msg = "純函式庫不得依賴資料庫 ORM（spec 001 FR-016 / 003 Principle IV）"
"psycopg".msg = "純函式庫不得依賴資料庫驅動（spec 001 FR-016 / 003 Principle IV）"
"pymongo".msg = "純函式庫不得依賴資料庫驅動（spec 001 FR-016 / 003 Principle IV）"
"kafka".msg = "純函式庫不得依賴訊息中介（spec 001 FR-016 / 003 Principle IV）"
"confluent_kafka".msg = "純函式庫不得依賴訊息中介（spec 001 FR-016 / 003 Principle IV）"
"requests".msg = "純函式庫不得進行網路 I/O（spec 001 FR-016 / 003 Principle IV）"
"httpx".msg = "純函式庫不得進行網路 I/O（spec 001 FR-016 / 003 Principle IV）"

# data_ingestion 例外：本身就是資料抓取套件，必須使用 yfinance / fredapi / requests-like 行為
# inference_service 例外：本身就是 HTTP 微服務，FastAPI / httpx / redis 為核心依賴（spec 005 FR-014）
[tool.ruff.lint.per-file-ignores]
"src/data_ingestion/**" = ["TID251"]
"src/inference_service/**" = ["TID251"]
"tests/**" = ["TID251"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
warn_unused_ignores = true
warn_redundant_casts = true
# strict = true 會因 pandas / pyarrow 缺 py.typed 與內部函式缺 return annotation
# 產生大量噪音；T047 已先收斂 ruff。剩餘 strict 化（return annotation + Literal
# narrow + Any-return）作為 Polish phase 的後續任務（追蹤於 tasks.md T047 補充）。
# 目前以 default 嚴格度執行確保 CI 至少能 lint / type-check 通過。
disallow_untyped_defs = false
warn_unused_configs = true
# pandas / pyarrow / fredapi / yfinance 都不附 py.typed marker；安裝 types-* stubs
# 後仍有大量 Any 漏網，與「strict」精神反向。實務折衷：對缺 stub 的第三方套件
# 略過分析，但保留專案內所有 src/ 程式碼的 strict 檢查。
[[tool.mypy.overrides]]
module = [
    "pandas",
    "pyarrow",
    "pyarrow.*",
    "yfinance",
    "fredapi",
    "jsonschema",
    "tenacity",
    "tenacity.*",
    "mplfinance",
    "plotly",
    "plotly.*",
    "matplotlib",
    "matplotlib.*",
    "gymnasium",
    "gymnasium.*",
    "stable_baselines3",
    "stable_baselines3.*",
    "torch",
    "torch.*",
    "apscheduler",
    "apscheduler.*",
    "fakeredis",
    "fakeredis.*",
    "testcontainers",
    "testcontainers.*",
    "openapi_spec_validator",
    "openapi_spec_validator.*",
]
ignore_missing_imports = true
follow_imports = "skip"


[tool.coverage.run]
source = ["data_ingestion", "smc_features", "portfolio_env", "ppo_training", "inference_service"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
